--- a/baseapp/templates/baseapp/index.html
+++ b/baseapp/templates/baseapp/index.html
@@ -94,6 +94,233 @@
 
 {% block body %}
 
+<div class="container overflow-hidden-small">
+    <section><!-- Products --> 
+      <div class="row products mb-3 custom-gutters1">
+        <div data-josh-anim-name="fadeInLeft" class="josh-js col-12 mb-2">
+          <h2 class="maintitle">Our products</h2> 
+        </div> 
+        <div class="col-lg-3 col-md-4 col-sm-6 text-center">
+          <div class="product featured-product">
+            <div data-josh-anim-name="fadeIn" class="josh-js image-wrapper">
+              <a href="product.html">
+                <h6 class="label">-30%</h6>
+                <img class="p-image" src="{% static 'images/product1.png' %}" alt=".">
+              </a>
+            </div>   
+            <h3 class="pricetitle1">Grilled Burger</h3> 
+            <h3 class="pricetitle">$16 <span>$19</span></h3>
+            <button type="button" class="custom-button2a" data-toggle="modal" data-target="#exampleModal">
+              Buy now<span></span>
+            </button> 
+                   
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-4 col-sm-6 text-center">
+          <div class="product featured-product">
+            <div data-josh-anim-name="fadeIn" class="josh-js image-wrapper">
+              <a href="product.html">
+                <h6 class="label">-30%</h6>
+                <img class="p-image" src="{% static 'images/product1.png' %}" alt=".">
+              </a>
+            </div>   
+            <h3 class="pricetitle1">Grilled Burger</h3> 
+            <h3 class="pricetitle">$16 <span>$19</span></h3>
+            <button type="button" class="custom-button2a" data-toggle="modal" data-target="#exampleModal">
+              Buy now<span></span>
+            </button> 
+                   
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-4 col-sm-6 text-center">
+          <div class="product featured-product">
+            <div data-josh-anim-name="fadeIn" class="josh-js image-wrapper">
+              <a href="product.html">
+                <h6 class="label">-30%</h6>
+                <img class="p-image" src="{% static 'images/product1.png' %}" alt=".">
+              </a>
+            </div>   
+            <h3 class="pricetitle1">Grilled Burger</h3> 
+            <h3 class="pricetitle">$16 <span>$19</span></h3>
+            <button type="button" class="custom-button2a" data-toggle="modal" data-target="#exampleModal">
+              Buy now<span></span>
+            </button> 
+                   
+          </div>
+        </div>  
+
+        <div class="col-lg-3 col-md-4 col-sm-6 text-center">
+          <div class="product featured-product">
+            <div data-josh-anim-name="fadeIn" class="josh-js image-wrapper">
+              <a href="product.html">
+                <h6 class="label">-30%</h6>
+                <img class="p-image" src="{% static 'images/product1.png' %}" alt=".">
+              </a>
+            </div>   
+            <h3 class="pricetitle1">Grilled Burger</h3> 
+            <h3 class="pricetitle">$16 <span>$19</span></h3>
+            <button type="button" class="custom-button2a" data-toggle="modal" data-target="#exampleModal">
+              Buy now<span></span>
+            </button> 
+                   
+          </div>
+        </div>
+      </div> 
+    </section>
+
+    <section><!-- Products --> 
+      <div class="row products mb-3 custom-gutters1">
+        <div data-josh-anim-name="fadeInLeft" class="josh-js col-12 mb-2">
+          <h2 class="maintitle">Our products</h2> 
+        </div> 
+        <div class="col-lg-3 col-md-4 col-sm-6 text-center">
+          <div class="product featured-product">
+            <div data-josh-anim-name="fadeIn" class="josh-js image-wrapper">
+              <a href="product.html">
+                <h6 class="label">-30%</h6>
+                <img class="p-image" src="{% static 'images/product1.png' %}" alt=".">
+              </a>
+            </div>   
+            <h3 class="pricetitle1">Grilled Burger</h3> 
+            <h3 class="pricetitle">$16 <span>$19</span></h3>
+            <button type="button" class="custom-button2a" data-toggle="modal" data-target="#exampleModal">
+              Buy now<span></span>
+            </button> 
+                   
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-4 col-sm-6 text-center">
+          <div class="product featured-product">
+            <div data-josh-anim-name="fadeIn" class="josh-js image-wrapper">
+              <a href="product.html">
+                <h6 class="label">-30%</h6>
+                <img class="p-image" src="{% static 'images/product1.png' %}" alt=".">
+              </a>
+            </div>   
+            <h3 class="pricetitle1">Grilled Burger</h3> 
+            <h3 class="pricetitle">$16 <span>$19</span></h3>
+            <button type="button" class="custom-button2a" data-toggle="modal" data-target="#exampleModal">
+              Buy now<span></span>
+            </button> 
+                   
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-4 col-sm-6 text-center">
+          <div class="product featured-product">
+            <div data-josh-anim-name="fadeIn" class="josh-js image-wrapper">
+              <a href="product.html">
+                <h6 class="label">-30%</h6>
+                <img class="p-image" src="{% static 'images/product1.png' %}" alt=".">
+              </a>
+            </div>   
+            <h3 class="pricetitle1">Grilled Burger</h3> 
+            <h3 class="pricetitle">$16 <span>$19</span></h3>
+            <button type="button" class="custom-button2a" data-toggle="modal" data-target="#exampleModal">
+              Buy now<span></span>
+            </button> 
+                   
+          </div>
+        </div>  
+
+        <div class="col-lg-3 col-md-4 col-sm-6 text-center">
+          <div class="product featured-product">
+            <div data-josh-anim-name="fadeIn" class="josh-js image-wrapper">
+              <a href="product.html">
+                <h6 class="label">-30%</h6>
+                <img class="p-image" src="{% static 'images/product1.png' %}" alt=".">
+              </a>
+            </div>   
+            <h3 class="pricetitle1">Grilled Burger</h3> 
+            <h3 class="pricetitle">$16 <span>$19</span></h3>
+            <button type="button" class="custom-button2a" data-toggle="modal" data-target="#exampleModal">
+              Buy now<span></span>
+            </button> 
+                   
+          </div>
+        </div>
+      </div> 
+    </section>
+
+    <section><!-- Products --> 
+      <div class="row products mb-3 custom-gutters1">
+        <div data-josh-anim-name="fadeInLeft" class="josh-js col-12 mb-2">
+          <h2 class="maintitle">Our products</h2> 
+        </div> 
+        <div class="col-lg-3 col-md-4 col-sm-6 text-center">
+          <div class="product featured-product">
+            <div data-josh-anim-name="fadeIn" class="josh-js image-wrapper">
+              <a href="product.html">
+                <h6 class="label">-30%</h6>
+                <img class="p-image" src="{% static 'images/product1.png' %}" alt=".">
+              </a>
+            </div>   
+            <h3 class="pricetitle1">Grilled Burger</h3> 
+            <h3 class="pricetitle">$16 <span>$19</span></h3>
+            <button type="button" class="custom-button2a" data-toggle="modal" data-target="#exampleModal">
+              Buy now<span></span>
+            </button> 
+                   
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-4 col-sm-6 text-center">
+          <div class="product featured-product">
+            <div data-josh-anim-name="fadeIn" class="josh-js image-wrapper">
+              <a href="product.html">
+                <h6 class="label">-30%</h6>
+                <img class="p-image" src="{% static 'images/product1.png' %}" alt=".">
+              </a>
+            </div>   
+            <h3 class="pricetitle1">Grilled Burger</h3> 
+            <h3 class="pricetitle">$16 <span>$19</span></h3>
+            <button type="button" class="custom-button2a" data-toggle="modal" data-target="#exampleModal">
+              Buy now<span></span>
+            </button> 
+                   
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-4 col-sm-6 text-center">
+          <div class="product featured-product">
+            <div data-josh-anim-name="fadeIn" class="josh-js image-wrapper">
+              <a href="product.html">
+                <h6 class="label">-30%</h6>
+                <img class="p-image" src="{% static 'images/product1.png' %}" alt=".">
+              </a>
+            </div>   
+            <h3 class="pricetitle1">Grilled Burger</h3> 
+            <h3 class="pricetitle">$16 <span>$19</span></h3>
+            <button type="button" class="custom-button2a" data-toggle="modal" data-target="#exampleModal">
+              Buy now<span></span>
+            </button> 
+                   
+          </div>
+        </div>  
+
+        <div class="col-lg-3 col-md-4 col-sm-6 text-center">
+          <div class="product featured-product">
+            <div data-josh-anim-name="fadeIn" class="josh-js image-wrapper">
+              <a href="product.html">
+                <h6 class="label">-30%</h6>
+                <img class="p-image" src="{% static 'images/product1.png' %}" alt=".">
+              </a>
+            </div>   
+            <h3 class="pricetitle1">Grilled Burger</h3> 
+            <h3 class="pricetitle">$16 <span>$19</span></h3>
+            <button type="button" class="custom-button2a" data-toggle="modal" data-target="#exampleModal">
+              Buy now<span></span>
+            </button> 
+                   
+          </div>
+        </div>
+      </div> 
+    </section>
+
+</div>
  {% endblock %}
 
 
@@ -106,7 +333,7 @@
         <div class="col-lg-6 col-md-12">
           <div class="row no-gutters">
             <div class="col-lg-5 col-md-6 mb-1">
-              <a href="#"><img class="footer-logo" src="{% static 'images/logo_footer.png' %}" alt="Burgos"></a>
+              <a href="{% url 'show_index' %}"><img class="footer-logo" src="{% static 'images/logo_footer.png' %}" alt="Burgos"></a>
             </div>
             <div class="col-lg-7 col-md-6 mb-1">
               <h3 class="footertitle">Quick links</h3>
