--- a/baseapp/templates/baseapp/index.html
+++ b/baseapp/templates/baseapp/index.html
@@ -28,7 +28,11 @@
                 </li>
                 {% endfor%}                
                 <li class="nav-item">
+                  {% if user.is_authenticated %}
+                  <a class="nav-link" href="{% url 'show_orders' %}">ЗАКАЗЫ</a>
+                  {% else %}
                   <a class="nav-link" href="#">КОНТАКТЫ</a>
+                  {% endif %}
                 </li>
               </ul>
             </div>
@@ -50,7 +54,13 @@
 
                       <div class="row justify-content-center pb-1">
                         <div class="col-4">
-                          <img src="{% static 'images/1.png' %}" alt="...">
+                          
+                          {% if item.offer.good.main_picture_is_exist %}             
+              <img src="{{ item.offer.good.get_main_picture.image.url }}" alt="..."/>
+              
+              {% else %}
+              <img src="{% static 'images/1.png' %}" alt="...">
+              {% endif %}
                         </div>
                         <div class="col-8">
                           <h4 class="mb-0">{{ item.offer.good.name }}</h4> 
