--- a/cartapp/templates/cartapp/cart.html
+++ b/cartapp/templates/cartapp/cart.html
@@ -20,67 +20,67 @@
  <main>
  <div class="container overflow-hidden-small">
    <div class="row p-0">
-	   <div class="col-lg-12 p-0">
+     <div class="col-lg-12 p-0">
       <form action="{% url 'update_cart' %}" method="post">
         {% csrf_token %}
-			<table class="table table-responsive-md">
-		    <thead>
-				  <tr>
-					  <th class="itemwidth">Item</th>
-					  <th>Price</th>
-					  <th class="quantitywidth">Quantity</th>
-					  <th>Subtotal</th>
-					  <th class="text-right"></th>
-				  </tr>
-				</thead> 
-        <form action="{% url 'update_cart' %}" method="post">
-        {% for item in cart.cart_items %}         
-				<tbody>
+      <table class="table table-responsive-md">
+        <thead>
           <tr>
-					  <td>
-					    <div class="row align-items-center">
-								<div class="col-3 pr-0">
-									 {% if item.offer.good.main_picture_is_exist %}             
+            <th class="itemwidth">Item</th>
+            <th>Price</th>
+            <th class="quantitywidth">Quantity</th>
+            <th>Subtotal</th>
+            <th class="text-right"></th>
+          </tr>
+        </thead> 
+        <form action="{% url 'update_cart' %}" method="post">
+        {% for item in cart.get_cart_items %}         
+        <tbody>
+          <tr>
+            <td>
+              <div class="row align-items-center">
+                <div class="col-3 pr-0">
+                   {% if item.offer.good.main_picture_is_exist %}             
               <img src="{{ item.offer.good.get_main_picture.image.url }}" alt="..."/>
               
               {% else %}
               <img src="{% static 'images/product-image.png' %}" alt="..."/>
               {% endif %}                   
-								</div>
-							  <div class="col-9 pl-1">
-									<h4>{{ item.offer.good.name }}</h4>
-                  <span class="gram">{{ item.offer }}</span>									
-							  </div>
-						  </div>
-					  </td>
-					  <td> 
-              <span class="cartprice">{{ item.price }}</span> 
+                </div>
+                <div class="col-9 pl-1">
+                  <h4>{{ item.offer.good.name }}</h4>
+                  <span class="gram">{{ item.offer }}</span>                  
+                </div>
+              </div>
             </td>
-					  <td>								
+            <td> 
+              <span class="cartprice">{{ item.get_price }}</span> 
+            </td>
+            <td>                
             <input type="hidden" name="item{{ forloop.counter }}" value="{{ item.offer.slug }}">
             <div class="counteritem">              
                 <a href="#" class="sc-minus">-</a>
                 <input type="text" name="quant{{ forloop.counter }}" value="{{ item.quant }}">
                 <a href="#" class="sc-plus">+</a>              
             </div>
-					  </td>
-						<td>
-              <span class="cartprice2">{{ item.sum }}</span>
             </td>
-					  <td class="text-right">
-							<a href="{% url 'del_from_cart' slug=item.offer.slug %}"><img src="{% static 'images/close2.png' %}" alt="close"/></a>
-						</td>
-				  </tr>				  
-				</tbody>
+            <td>
+              <span class="cartprice2">{{ item.get_sum }}</span>
+            </td>
+            <td class="text-right">
+              <a href="{% url 'del_from_cart' slug=item.offer.slug %}"><img src="{% static 'images/close2.png' %}" alt="close"/></a>
+            </td>
+          </tr>         
+        </tbody>
         {% endfor %}
         
-			</table>
+      </table>
       <div class="row mb-2">
         <div class="col text-right">
-          <a href="{% url 'clear_cart' %}" class="custom-button3 mr-4 mb-1">ОЧИСТИТЬ</a>		
-				  <button type="submit" class="custom-button1 ml-5">СОХРАНИТЬ</button>
+          <a href="{% url 'clear_cart' %}" class="custom-button3 mr-4 mb-1">ОЧИСТИТЬ</a>    
+          <button type="submit" class="custom-button1 ml-5">СОХРАНИТЬ</button>
           <!-- <a href="#" class="custom-button1 ml-5">ПЕРЕСЧИТАТЬ</a>   -->
-				</div>
+        </div>
       </div>
       </form>
       </div>
@@ -110,7 +110,7 @@
           <div class="col-sm-5">
           </div>
           <div class="cart-subtotal-inner col-sm-7">
-            <h4>К ОПЛАТЕ<span>{{ cart.cart_sum }}</span></h4>            
+            <h4>К ОПЛАТЕ<span>{{ cart.get_cart_sum }}</span></h4>            
           </div>
         </div> 
       </div>  
