--- a/cartapp/templates/cartapp/cart.html
+++ b/cartapp/templates/cartapp/cart.html
@@ -3,119 +3,133 @@
 
 {% block body %}
 
- <header>
+<header>
   <div class="josh-js cart-title cart-title2">
     <div class="container">
       <div class="row custom-gutters1">
-        <div class="col-lg-6 col-12">
+        <div class="col-lg-4 col-12">
           <div class="bread-crumb mb-1">
             <a href="{% url 'show_index' %}">ДОМОЙ</a>
-          </div> 
+          </div>           
+        </div>
+        <div class="col-lg-8 col-12">
+          
           <h1>КОРЗИНА</h1>
         </div>
       </div>
     </div>    
   </div>   
- </header>
- <main>
+</header>
+<main>
  <div class="container overflow-hidden-small">
    <div class="row p-0">
      <div class="col-lg-12 p-0">
       <form action="{% url 'update_cart' %}" method="post">
         {% csrf_token %}
-      <table class="table table-responsive-md">
-        <thead>
-          <tr>
-            <th class="itemwidth">Item</th>
-            <th>Price</th>
-            <th class="quantitywidth">Quantity</th>
-            <th>Subtotal</th>
-            <th class="text-right"></th>
-          </tr>
-        </thead> 
-        <form action="{% url 'update_cart' %}" method="post">
-        {% for item in cart.get_cart_items %}         
-        <tbody>
-          <tr>
-            <td>
-              <div class="row align-items-center">
-                <div class="col-3 pr-0">
-                   {% if item.offer.good.main_picture_is_exist %}             
-              <img src="{{ item.offer.good.get_main_picture.image.url }}" alt="..."/>
-              
-              {% else %}
-              <img src="{% static 'images/product-image.png' %}" alt="..."/>
-              {% endif %}                   
-                </div>
-                <div class="col-9 pl-1">
-                  <h4>{{ item.offer.good.name }}</h4>
-                  <span class="gram">{{ item.offer }}</span>                  
-                </div>
+
+        <div class="row p-0 align-items-center">
+          <div class="col-md-6">
+            <h4 class="pricetitle1">Наименование</h4>
+          </div>
+          <div class="col-md-1">
+            <h4 class="pricetitle1 ">Цена</h4>
+          </div>
+          <div class="col-md-3">
+            <h4 class="pricetitle1">Кол-во</h4>
+          </div>        
+          <div class="col-md-1">
+            <h4 class="pricetitle1">Сумма</h4>
+          </div>
+          <div class="col-md-1">
+
+          </div> 
+        </div>
+
+        {% for item in cart.get_cart_items %}
+        <input type="hidden" name="item{{ forloop.counter }}" value="{{ item.offer.slug }}">
+
+        <div class="row p-0">
+          <div class="col-md-6">
+            <div class="row align-items-center">
+              <div class="col-3 pr-0">
+                {% if item.offer.good.main_picture_is_exist %}             
+                <img src="{{ item.offer.good.get_main_picture.image.url }}" alt="..."/>
+
+                {% else %}
+                <img src="{% static 'images/product-image.png' %}" alt="..."/>
+                {% endif %}                   
               </div>
-            </td>
-            <td> 
-              <span class="cartprice">{{ item.get_price }}</span> 
-            </td>
-            <td>                
-            <input type="hidden" name="item{{ forloop.counter }}" value="{{ item.offer.slug }}">
-            <div class="counteritem">              
-                <a href="#" class="sc-minus">-</a>
-                <input type="text" name="quant{{ forloop.counter }}" value="{{ item.quant }}">
-                <a href="#" class="sc-plus">+</a>              
-            </div>
-            </td>
-            <td>
-              <span class="cartprice2">{{ item.get_sum }}</span>
-            </td>
-            <td class="text-right">
-              <a href="{% url 'del_from_cart' slug=item.offer.slug %}"><img src="{% static 'images/close2.png' %}" alt="close"/></a>
-            </td>
-          </tr>         
-        </tbody>
-        {% endfor %}
-        
-      </table>
+              <div class="col-9 pl-1">
+               <h2>{{ item.offer.good.name }}</h2>
+               <span class="gram">{{ item.offer }}</span>                 
+             </div>
+           </div>
+         </div>
+         <div class="col-md-1">
+          <h4 class="pricetitle">{{ item.get_price }}</h4>
+        </div>
+        <div class="col-md-3">
+          <h4>
+          <div class="counteritem">              
+            <a href="#" class="sc-minus">-</a>
+            <input type="text" name="quant{{ forloop.counter }}" value="{{ item.quant }}">
+            <a href="#" class="sc-plus">+</a>              
+          </div>
+        </h4>
+        </div>        
+        <div class="col-md-1">
+          <h4 class="pricetitle text-right">{{ item.get_sum }}</h4>
+        </div>
+        <div class="col-md-1">
+          <a href="{% url 'del_from_cart' slug=item.offer.slug %}"><img src="{% static 'images/close2.png' %}" alt="close"/></a>
+        </div>
+      </div>
+
+
+
+      {% endfor %}
+
       <div class="row mb-2">
         <div class="col text-right">
           <a href="{% url 'clear_cart' %}" class="custom-button3 mr-4 mb-1">ОЧИСТИТЬ</a>    
-          <button type="submit" class="custom-button1 ml-5">СОХРАНИТЬ</button>
-          <!-- <a href="#" class="custom-button1 ml-5">ПЕРЕСЧИТАТЬ</a>   -->
+          <button type="submit" class="custom-button1 ml-5">СОХРАНИТЬ</button>          
         </div>
       </div>
-      </form>
-      </div>
-    </div>
-    <div class="row cart-subtotal pb-2">
-      <div class="col-md-5 mb-2">
-        <h4>ПРОМОКОД</h4> 
-        <div class="cart-subtotal-input">
-          <input class="form-control" type="text" placeholder="Введите Ваш промокод здесь">
-          <input type="submit" value="Отправить">
-        </div> 
-      </div> 
-      <div class="col-md-1">
-      </div>      
-      <div class="col-md-6">
-        <h4>КОНТАКТНЫЕ ДАННЫЕ</h4>
-        <form action="{% url 'create_order' %}" method="post"> 
-        {% csrf_token %}
-        <input type="text" class="form-control" name="customer" placeholder="Номер телефона">        
-        <div class="row">
-          <div class="col-12 mt-1 mb-3 text-right">
-            <button type="submit" class="custom-button1 ml-5">ЗАКАЗАТЬ</button>  
-          </div>
-        </div>
-        </form>
-        <div class="row">
-          <div class="col-sm-5">
-          </div>
-          <div class="cart-subtotal-inner col-sm-7">
-            <h4>К ОПЛАТЕ<span>{{ cart.get_cart_sum }}</span></h4>            
-          </div>
-        </div> 
-      </div>  
-    </div>
+    </form>
   </div>
-  </main>
+</div>
+<div class="row cart-subtotal pb-2">
+  <div class="col-md-5 mb-2">
+    <h4>ПРОМОКОД</h4> 
+    <div class="cart-subtotal-input">
+      <input class="form-control" type="text" placeholder="Введите Ваш промокод здесь">
+      <input type="submit" value="Отправить">
+    </div> 
+  </div> 
+  <div class="col-md-1">
+  </div>      
+  <div class="col-md-6">
+    <h4>КОНТАКТНЫЕ ДАННЫЕ</h4>
+    <form action="{% url 'create_order' %}" method="post"> 
+      {% csrf_token %}
+      <input type="text" class="form-control" name="customer" placeholder="Номер телефона">
+      <textarea type="text" class="form-control" name="comment" placeholder="Комментарий"></textarea>
+      <div class="row">
+        <div class="col-12 mt-1 mb-3 text-right">
+          <button type="submit" class="custom-button1 ml-5">ЗАКАЗАТЬ</button>  
+        </div>
+      </div>
+    </form>
+    <div class="row">
+      <div class="col-sm-5">
+      </div>
+      <div class="cart-subtotal-inner col-sm-7">
+        <h4>К ОПЛАТЕ<span>{{ cart.get_cart_sum }}</span></h4>            
+      </div>
+    </div> 
+  </div>  
+</div>
+</div>
+</main>
 
 {% endblock %}
