--- a/orderapp/templates/orderapp/orders.html
+++ b/orderapp/templates/orderapp/orders.html
@@ -7,12 +7,14 @@
   <div class="josh-js cart-title cart-title2">
     <div class="container">
       <div class="row custom-gutters1">
-        <div class="col-lg-6 col-12">
+        <div class="col-lg-5 col-12">
           <div class="bread-crumb mb-1">
             <a href="{% url 'show_index' %}">ДОМОЙ</a>
           </div>           
         </div>
-        <h1>Заказы</h1>
+        <div class="col-lg-7 col-12">
+          <h1>Заказы</h1>
+        </div>
       </div>
     </div>    
   </div>   
