--- a/baseapp/templates/baseapp/index.html
+++ b/baseapp/templates/baseapp/index.html
@@ -18,16 +18,32 @@
             </button> 
             <div class="collapse navbar-collapse" id="main_nav">
               <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a class="nav-link" href="{% url 'show_index' %}"> ДОМОЙ </a>                  
+                <li class="nav-item">                  
+                  <a class="nav-link" href="{% url 'show_index' %}"> ДОМОЙ </a>                 
                 </li>
-                
-                {% for category in categoryes %}
-                <li class="nav-item">
-                  <a class="nav-link" href="{% url 'show_list' slug=category.slug %}">{{ category.name }}</a>                  
+
+                {% for menu in mainmenu %}
+
+                {% if menu.get_childrens_count == 0 %} 
+
+                <li class="nav-item dropdown">
+                  <a class="nav-link" href="{% url 'show_list' slug=menu.slug %}">{{ menu.name }}</a>
                 </li>
-                {% endfor%}                
-                <li class="nav-item">
+                {% else %}
+
+                <li class="nav-item dropdown">
+                  <a class="nav-link" href="#" data-toggle="dropdown">{{ menu.name }}<i class="dropdown-icon fa fa-chevron-down"></i></a>
+                  
+                  <ul class="dropdown-menu fade-down">
+                    {% for item in menu.get_childrens %}
+                    <li><a class="dropdown-item" href="{% url 'show_list' slug=item.slug %}">{{ item.name }}</a></li>                    
+                    {% endfor%}
+                  </ul>                  
+                </li>
+                {% endif %}
+                {% endfor%}
+
+                <li class="nav-item dropdown">
                   {% if user.is_authenticated %}
                   <a class="nav-link" href="{% url 'show_orders' %}">ЗАКАЗЫ</a>
                   {% else %}
@@ -106,230 +122,147 @@
 {% block body %}
 
 <div class="container overflow-hidden-small">
+
+
+    {% if is_sale %}
     <section><!-- Products --> 
+
+      
       <div class="row products mb-3 custom-gutters1">
         <div data-josh-anim-name="fadeInLeft" class="josh-js col-12 mb-2">
-          <h2 class="maintitle">Our products</h2> 
-        </div> 
-        <div class="col-lg-3 col-md-4 col-sm-6 text-center">
+          <h2 class="maintitle">РАСПРОДАЖИ</h2> 
+        </div>
+
+        {% for item in is_sale %} 
+        <div class="col-lg-3 col-md-4 col-sm-6 text-center">          
           <div class="product featured-product">
             <div data-josh-anim-name="fadeIn" class="josh-js image-wrapper">
-              <a href="product.html">
-                <h6 class="label">-30%</h6>
-                <img class="p-image" src="{% static 'images/product1.png' %}" alt=".">
+              <a href="{% url 'show_item' slug=item.slug %}">
+                {% if item.discount != 0 %}<h6 class="label">-{{ item.discount }}%</h6>{% endif %}
+                {% if item.main_picture_is_exist %}             
+              <img class="p-image" src="{{ item.get_main_picture.image.url }}" alt="#">
+              {% else %}
+              <img class="p-image" src="{% static 'images/product1b.png' %}" alt="#">
+              {% endif %}
               </a>
             </div>   
-            <h3 class="pricetitle1">Grilled Burger</h3> 
-            <h3 class="pricetitle">$16 <span>$19</span></h3>
-            <button type="button" class="custom-button2a" data-toggle="modal" data-target="#exampleModal">
-              Buy now<span></span>
-            </button> 
+            <h3 class="pricetitle1">{{ item.name }}</h3> 
+            <h3 class="pricetitle">{{ item.price }} {% if item.old_price != 0 %}<span>{{ item.old_price }}</span>{% endif %}</h3>
+            <a href="{% url 'add_to_cart' slug=item.slug %}" class="custom-button2a ml-4">В КОРЗИНУ</a> 
                    
           </div>
         </div>
-
-        <div class="col-lg-3 col-md-4 col-sm-6 text-center">
-          <div class="product featured-product">
-            <div data-josh-anim-name="fadeIn" class="josh-js image-wrapper">
-              <a href="product.html">
-                <h6 class="label">-30%</h6>
-                <img class="p-image" src="{% static 'images/product1.png' %}" alt=".">
-              </a>
-            </div>   
-            <h3 class="pricetitle1">Grilled Burger</h3> 
-            <h3 class="pricetitle">$16 <span>$19</span></h3>
-            <button type="button" class="custom-button2a" data-toggle="modal" data-target="#exampleModal">
-              Buy now<span></span>
-            </button> 
-                   
-          </div>
+        {% endfor %}
+        
         </div>
-
-        <div class="col-lg-3 col-md-4 col-sm-6 text-center">
-          <div class="product featured-product">
-            <div data-josh-anim-name="fadeIn" class="josh-js image-wrapper">
-              <a href="product.html">
-                <h6 class="label">-30%</h6>
-                <img class="p-image" src="{% static 'images/product1.png' %}" alt=".">
-              </a>
-            </div>   
-            <h3 class="pricetitle1">Grilled Burger</h3> 
-            <h3 class="pricetitle">$16 <span>$19</span></h3>
-            <button type="button" class="custom-button2a" data-toggle="modal" data-target="#exampleModal">
-              Buy now<span></span>
-            </button> 
-                   
-          </div>
-        </div>  
-
-        <div class="col-lg-3 col-md-4 col-sm-6 text-center">
-          <div class="product featured-product">
-            <div data-josh-anim-name="fadeIn" class="josh-js image-wrapper">
-              <a href="product.html">
-                <h6 class="label">-30%</h6>
-                <img class="p-image" src="{% static 'images/product1.png' %}" alt=".">
-              </a>
-            </div>   
-            <h3 class="pricetitle1">Grilled Burger</h3> 
-            <h3 class="pricetitle">$16 <span>$19</span></h3>
-            <button type="button" class="custom-button2a" data-toggle="modal" data-target="#exampleModal">
-              Buy now<span></span>
-            </button> 
-                   
-          </div>
-        </div>
-      </div> 
     </section>
+    {% endif %}
 
+
+    {% if is_new %}
     <section><!-- Products --> 
+
+      
       <div class="row products mb-3 custom-gutters1">
         <div data-josh-anim-name="fadeInLeft" class="josh-js col-12 mb-2">
-          <h2 class="maintitle">Our products</h2> 
-        </div> 
-        <div class="col-lg-3 col-md-4 col-sm-6 text-center">
+          <h2 class="maintitle">НОВИНКИ</h2> 
+        </div>
+
+        {% for item in is_new %} 
+        <div class="col-lg-3 col-md-4 col-sm-6 text-center">          
           <div class="product featured-product">
             <div data-josh-anim-name="fadeIn" class="josh-js image-wrapper">
-              <a href="product.html">
-                <h6 class="label">-30%</h6>
-                <img class="p-image" src="{% static 'images/product1.png' %}" alt=".">
+              <a href="{% url 'show_item' slug=item.slug %}">
+                {% if item.discount != 0 %}<h6 class="label">-{{ item.discount }}%</h6>{% endif %}
+                {% if item.main_picture_is_exist %}             
+              <img class="p-image" src="{{ item.get_main_picture.image.url }}" alt="#">
+              {% else %}
+              <img class="p-image" src="{% static 'images/product1b.png' %}" alt="#">
+              {% endif %}
               </a>
             </div>   
-            <h3 class="pricetitle1">Grilled Burger</h3> 
-            <h3 class="pricetitle">$16 <span>$19</span></h3>
-            <button type="button" class="custom-button2a" data-toggle="modal" data-target="#exampleModal">
-              Buy now<span></span>
-            </button> 
+            <h3 class="pricetitle1">{{ item.name }}</h3> 
+            <h3 class="pricetitle">{{ item.price }} {% if item.old_price != 0 %}<span>{{ item.old_price }}</span>{% endif %}</h3>
+            <a href="{% url 'add_to_cart' slug=item.slug %}" class="custom-button2a ml-4">В КОРЗИНУ</a> 
                    
           </div>
         </div>
-
-        <div class="col-lg-3 col-md-4 col-sm-6 text-center">
-          <div class="product featured-product">
-            <div data-josh-anim-name="fadeIn" class="josh-js image-wrapper">
-              <a href="product.html">
-                <h6 class="label">-30%</h6>
-                <img class="p-image" src="{% static 'images/product1.png' %}" alt=".">
-              </a>
-            </div>   
-            <h3 class="pricetitle1">Grilled Burger</h3> 
-            <h3 class="pricetitle">$16 <span>$19</span></h3>
-            <button type="button" class="custom-button2a" data-toggle="modal" data-target="#exampleModal">
-              Buy now<span></span>
-            </button> 
-                   
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-md-4 col-sm-6 text-center">
-          <div class="product featured-product">
-            <div data-josh-anim-name="fadeIn" class="josh-js image-wrapper">
-              <a href="product.html">
-                <h6 class="label">-30%</h6>
-                <img class="p-image" src="{% static 'images/product1.png' %}" alt=".">
-              </a>
-            </div>   
-            <h3 class="pricetitle1">Grilled Burger</h3> 
-            <h3 class="pricetitle">$16 <span>$19</span></h3>
-            <button type="button" class="custom-button2a" data-toggle="modal" data-target="#exampleModal">
-              Buy now<span></span>
-            </button> 
-                   
-          </div>
-        </div>  
-
-        <div class="col-lg-3 col-md-4 col-sm-6 text-center">
-          <div class="product featured-product">
-            <div data-josh-anim-name="fadeIn" class="josh-js image-wrapper">
-              <a href="product.html">
-                <h6 class="label">-30%</h6>
-                <img class="p-image" src="{% static 'images/product1.png' %}" alt=".">
-              </a>
-            </div>   
-            <h3 class="pricetitle1">Grilled Burger</h3> 
-            <h3 class="pricetitle">$16 <span>$19</span></h3>
-            <button type="button" class="custom-button2a" data-toggle="modal" data-target="#exampleModal">
-              Buy now<span></span>
-            </button> 
-                   
-          </div>
-        </div>
-      </div> 
+        {% endfor %}
+        
+        </div>      
     </section>
+    {% endif %}
 
+
+    {% if is_hot %}
     <section><!-- Products --> 
+
+      
       <div class="row products mb-3 custom-gutters1">
         <div data-josh-anim-name="fadeInLeft" class="josh-js col-12 mb-2">
-          <h2 class="maintitle">Our products</h2> 
+          <h2 class="maintitle">СПЕЦПРЕДЛОЖЕНИЯ</h2> 
+        </div>
+
+        {% for item in is_hot %} 
+        <div class="col-lg-3 col-md-4 col-sm-6 text-center">          
+          <div class="product featured-product">
+            <div data-josh-anim-name="fadeIn" class="josh-js image-wrapper">
+              <a href="{% url 'show_item' slug=item.slug %}">
+                {% if item.discount != 0 %}<h6 class="label">-{{ item.discount }}%</h6>{% endif %}
+                {% if item.main_picture_is_exist %}             
+              <img class="p-image" src="{{ item.get_main_picture.image.url }}" alt="#">
+              {% else %}
+              <img class="p-image" src="{% static 'images/product1b.png' %}" alt="#">
+              {% endif %}
+              </a>
+            </div>   
+            <h3 class="pricetitle1">{{ item.name }}</h3> 
+            <h3 class="pricetitle">{{ item.price }} {% if item.old_price != 0 %}<span>{{ item.old_price }}</span>{% endif %}</h3>
+            <a href="{% url 'add_to_cart' slug=item.slug %}" class="custom-button2a ml-4">В КОРЗИНУ</a> 
+                   
+          </div>
+        </div>
+        {% endfor %}
+        
         </div> 
-        <div class="col-lg-3 col-md-4 col-sm-6 text-center">
-          <div class="product featured-product">
-            <div data-josh-anim-name="fadeIn" class="josh-js image-wrapper">
-              <a href="product.html">
-                <h6 class="label">-30%</h6>
-                <img class="p-image" src="{% static 'images/product1.png' %}" alt=".">
-              </a>
-            </div>   
-            <h3 class="pricetitle1">Grilled Burger</h3> 
-            <h3 class="pricetitle">$16 <span>$19</span></h3>
-            <button type="button" class="custom-button2a" data-toggle="modal" data-target="#exampleModal">
-              Buy now<span></span>
-            </button> 
-                   
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-md-4 col-sm-6 text-center">
-          <div class="product featured-product">
-            <div data-josh-anim-name="fadeIn" class="josh-js image-wrapper">
-              <a href="product.html">
-                <h6 class="label">-30%</h6>
-                <img class="p-image" src="{% static 'images/product1.png' %}" alt=".">
-              </a>
-            </div>   
-            <h3 class="pricetitle1">Grilled Burger</h3> 
-            <h3 class="pricetitle">$16 <span>$19</span></h3>
-            <button type="button" class="custom-button2a" data-toggle="modal" data-target="#exampleModal">
-              Buy now<span></span>
-            </button> 
-                   
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-md-4 col-sm-6 text-center">
-          <div class="product featured-product">
-            <div data-josh-anim-name="fadeIn" class="josh-js image-wrapper">
-              <a href="product.html">
-                <h6 class="label">-30%</h6>
-                <img class="p-image" src="{% static 'images/product1.png' %}" alt=".">
-              </a>
-            </div>   
-            <h3 class="pricetitle1">Grilled Burger</h3> 
-            <h3 class="pricetitle">$16 <span>$19</span></h3>
-            <button type="button" class="custom-button2a" data-toggle="modal" data-target="#exampleModal">
-              Buy now<span></span>
-            </button> 
-                   
-          </div>
-        </div>  
-
-        <div class="col-lg-3 col-md-4 col-sm-6 text-center">
-          <div class="product featured-product">
-            <div data-josh-anim-name="fadeIn" class="josh-js image-wrapper">
-              <a href="product.html">
-                <h6 class="label">-30%</h6>
-                <img class="p-image" src="{% static 'images/product1.png' %}" alt=".">
-              </a>
-            </div>   
-            <h3 class="pricetitle1">Grilled Burger</h3> 
-            <h3 class="pricetitle">$16 <span>$19</span></h3>
-            <button type="button" class="custom-button2a" data-toggle="modal" data-target="#exampleModal">
-              Buy now<span></span>
-            </button> 
-                   
-          </div>
-        </div>
-      </div> 
     </section>
+    {% endif %}
+
+
+    {% if most_popular %}
+    <section><!-- Products --> 
+
+      
+      <div class="row products mb-3 custom-gutters1">
+        <div data-josh-anim-name="fadeInLeft" class="josh-js col-12 mb-2">
+          <h2 class="maintitle">ХИТЫ ПРОДАЖ</h2> 
+        </div>
+
+        {% for item in most_popular %} 
+        <div class="col-lg-3 col-md-4 col-sm-6 text-center">          
+          <div class="product featured-product">
+            <div data-josh-anim-name="fadeIn" class="josh-js image-wrapper">
+              <a href="{% url 'show_item' slug=item.slug %}">
+                {% if item.discount != 0 %}<h6 class="label">-{{ item.discount }}%</h6>{% endif %}
+                {% if item.main_picture_is_exist %}             
+              <img class="p-image" src="{{ item.get_main_picture.image.url }}" alt="#">
+              {% else %}
+              <img class="p-image" src="{% static 'images/product1b.png' %}" alt="#">
+              {% endif %}
+              </a>
+            </div>   
+            <h3 class="pricetitle1">{{ item.name }}</h3> 
+            <h3 class="pricetitle">{{ item.price }} {% if item.old_price != 0 %}<span>{{ item.old_price }}</span>{% endif %}</h3>
+            <a href="{% url 'add_to_cart' slug=item.slug %}" class="custom-button2a ml-4">В КОРЗИНУ</a> 
+                   
+          </div>
+        </div>
+        {% endfor %}
+        
+        </div>
+    </section>
+    {% endif %}    
+    
 
 </div>
  {% endblock %}
