--- a/catalogapp/templates/catalogapp/item.html
+++ b/catalogapp/templates/catalogapp/item.html
@@ -40,7 +40,7 @@
        
        <div class="col-md-7">
          <div class="cart-title pl1 pt-1">
-           <h1 class="mb-0">{{ item.name }}</h1>
+           <h1 class="mb-0">{{ item.site_name }}</h1>
            
            <div class="product featured-product">
 
