--- a/baseapp/templates/baseapp/index.html
+++ b/baseapp/templates/baseapp/index.html
@@ -79,7 +79,7 @@
               {% endif %}
                         </div>
                         <div class="col-8">
-                          <h4 class="mb-0">{{ item.offer.good.name }}</h4> 
+                          <h4 class="mb-0">{{ item.offer.good.site_name }}</h4> 
                           <span>{{ item.quant }}</span>
                           <span>X</span>
                           <span>{{ item.get_price }}</span>
