--- a/orderapp/templates/orderapp/order.html
+++ b/orderapp/templates/orderapp/order.html
@@ -75,7 +75,7 @@
                 {% endif %}                   
               </div>
               <div class="col-9 pl-1">
-               <h2>{{ item.offer.good.name }}</h2>
+               <h2>{{ item.offer.good.site_name }}</h2>
                <span class="gram">{{ item.offer }}</span>                 
              </div>
            </div>
