--- a/orderapp/templates/orderapp/order.html
+++ b/orderapp/templates/orderapp/order.html
@@ -8,19 +8,25 @@
   <div class="josh-js cart-title cart-title2">
     <div class="container">
       <div class="row custom-gutters1">
-        <div class="col-lg-3 col-2">
+        <div class="col-lg-2 col-2">
           <div class="bread-crumb mb-1">
             <a href="{% url 'show_index' %}">ДОМОЙ</a>
           </div>           
         </div>
-        <div class="col-lg-8 col-10">
+        <div class="col-lg-6 col-10">
           <h2>Заказ №{{ order }}</h2>
           
         </div>
 
-        <div class="col-lg-1 col-10">
-        {% if user.is_authenticated %}         
-            <a href="{% url 'set_is_sale' id=order.id %}" class="custom-button1 ml-5">ПОДТВЕРДИТЬ</a>          
+        <div class="col-lg-2 col-10">
+        {% if user.is_authenticated and order.in_work %}         
+            <a href="{% url 'set_is_confirmed' id=order.id %}" class="custom-button1 ml-5">ПОДТВЕРДИТЬ</a>          
+          {% endif %}
+        </div>
+
+        <div class="col-lg-2 col-10">
+        {% if user.is_authenticated and order.in_work %}         
+            <a href="{% url 'set_is_canceled' id=order.id %}" class="custom-button1 ml-5">ОТМЕНИТЬ</a>          
           {% endif %}
         </div>
         
