--- a/orderapp/templates/orderapp/orders.html
+++ b/orderapp/templates/orderapp/orders.html
@@ -4,19 +4,36 @@
 
 {% block body %}
 
+{% if user.is_authenticated %}
 <header>
   <div class="josh-js cart-title cart-title2">
     <div class="container">
       <div class="row custom-gutters1">
-        <div class="col-lg-5 col-12">
+        <div class="col-lg-3 col-12">
           <div class="bread-crumb mb-1">
             <a href="{% url 'show_index' %}">ДОМОЙ</a>
           </div>           
         </div>
-        <div class="col-lg-7 col-12">
-          <h1>Заказы</h1>
+        <div class="col-lg-9 col-12">
+          <h1>{{ title }}</h1>
         </div>
       </div>
+
+      <div class="row custom-gutters1">
+        <div class="col-lg-4 col-12">          
+            <a href="{% url 'show_orders' %}" class="custom-button1 ml-5">К ОБРАБОТКЕ</a>          
+        </div>
+
+        <div class="col-lg-4 col-12">          
+            <a href="{% url 'show_confirmed' %}" class="custom-button1 ml-5">ПОДТВЕРЖДЕННЫЕ</a>          
+        </div>
+
+        <div class="col-lg-4 col-12">          
+            <a href="{% url 'show_canceled' %}" class="custom-button1 ml-5">ОТМЕНЕННЫЕ</a>          
+        </div>
+
+      </div>
+
     </div>    
   </div>   
 </header>
@@ -61,5 +78,6 @@
   {% endfor %}
 </div>
 </main>
+{% endif %}
 
 {% endblock %}
