--- a/catalogapp/templates/catalogapp/list.html
+++ b/catalogapp/templates/catalogapp/list.html
@@ -2,6 +2,23 @@
 {% load static %}
 
 {% block body %}
+<header>
+  <div class="josh-js cart-title cart-title2">
+    <div class="container">
+      <div class="row custom-gutters1">
+        <div class="col-lg-4 col-12">
+          <div class="bread-crumb mb-1">
+            
+          </div>           
+        </div>
+        <div class="col-lg-8 col-12">
+          
+          
+        </div>
+      </div>
+    </div>    
+  </div>   
+</header>
 <main>
 	<div class="container overflow-hidden-small">
 
